[gd_scene load_steps=10 format=3 uid="uid://bcts2jntolnyr"]

[ext_resource type="Script" path="res://scene/ChoosenTable.gd" id="1_548of"]
[ext_resource type="PackedScene" uid="uid://nqsvpqklgboq" path="res://scene/World.tscn" id="1_ncwp2"]

[sub_resource type="Theme" id="Theme_88apu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xyjo"]
bg_color = Color(0, 0.4, 0.298039, 0.607843)
border_width_left = 25
border_width_top = 10
border_width_right = 25
border_width_bottom = 10
border_color = Color(0, 0.4, 0.298039, 0.607843)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6srkl"]
bg_color = Color(0.635294, 0, 0.196078, 0.607843)
border_width_left = 25
border_width_top = 10
border_width_right = 25
border_width_bottom = 10
border_color = Color(0.635294, 0, 0.196078, 0.607843)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4qkk"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyg01"]
bg_color = Color(0.635294, 0, 0.196078, 0.607843)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.635294, 0, 0.196078, 0.607843)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5wfq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eotah"]
size = Vector3(0.562105, 1, 0.387207)

[node name="ChoosenTable" type="Node3D"]
script = ExtResource("1_548of")

[node name="World" parent="." instance=ExtResource("1_ncwp2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56376, 0, -2.58892)

[node name="SubViewportContainer" type="SubViewportContainer" parent="World"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="World/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="World/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.58396, 0)

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.58396, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelSelected" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Selected Table: 0"

[node name="BeginBtn" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_88apu")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6xyjo")
theme_override_styles/hover = SubResource("StyleBoxFlat_6srkl")
text = "Begin Lesson"

[node name="ExitBtn" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_d4qkk")
theme_override_styles/hover = SubResource("StyleBoxFlat_pyg01")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t5wfq")
text = "Exit"

[node name="Table" type="Node3D" parent="."]

[node name="Table01" type="Area3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8914, -0.0562693, -1.92168)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0116272, 0, 0.00463867)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00870788, 0.562402, 0)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table02" type="Area3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1431, -0.0562693, -1.92168)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table02"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0227814, 0, 0.00463867)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table02"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0191945, 0.562402, 0)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table03" type="Area3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.275426, -0.0562693, -1.92168)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table03"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.153977, 0, 0.00463867)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table03"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table04" type="Area3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.430276, -0.0562693, -1.92168)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table04"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.188483, 0, -0.00339544)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table04"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table05" type="Area3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.13394, -0.0562693, -1.92168)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table05"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.188483, 0, -0.00339544)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table05"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table06" type="Area3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86772, -0.0562693, -1.92168)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table06"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.195921, 0, -0.0148054)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table06"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.186977, 0.562402, 0)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table07" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.333159, -0.0562693, -0.341628)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table07"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.195921, 0, -0.0148054)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table07"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table08" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.333159, -0.0562693, 0.433816)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table08"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198456, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table08"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.186977, 0.562402, 1.19209e-07)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table09" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.333159, -0.0562693, 1.14005)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table09"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198456, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table09"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20795, 0.562402, 1.19209e-07)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table10" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.333159, -0.0562693, 1.89675)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198456, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table11" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.364138, -0.0562693, 2.69209)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198456, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table12" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.264669, -0.0562693, 2.65299)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198456, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.207933, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table13" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.264669, -0.0562693, 1.90481)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198456, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table14" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.264669, -0.0562693, 1.17107)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224138, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table15" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.264669, -0.0562693, 0.490604)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224138, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.159008, 0.562402, 1.19209e-07)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table16" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.264669, -0.0562693, -0.231123)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table16"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224138, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table16"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, -0.0611572)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table17" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.59589, -0.0562693, 0.986602)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table17"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224138, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table17"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table18" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.59589, -0.0562693, 1.72039)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table18"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224138, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table18"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134545, 0.562402, 5.96046e-08)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table19" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.0771, -0.0562693, 1.72039)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table19"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224138, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table19"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.110083, 0.562402, 0)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[node name="Table20" type="Area3D" parent="Table"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.0771, -0.0562693, 1.09124)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table/Table20"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224138, 0, -0.0148053)
shape = SubResource("BoxShape3D_eotah")

[node name="OmniLight3D" type="OmniLight3D" parent="Table/Table20"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26909, 0.562402, 0)
visible = false
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
omni_range = 0.846261

[connection signal="pressed" from="MarginContainer/VBoxContainer/BeginBtn" to="." method="_on_begin_btn_pressed"]
[connection signal="pressed" from="MarginContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
